# perro_guardian_wifi

./: .gitignore  AGENTS.md  CMakeLists.txt  GUIA_CONEXIONES_ESP32.md  GUIA_ESP_IDF_DESDE_CERO.md  PROMPT_WEB_ESP32_TELEGRAM.md  README.md  sdkconfig.defaults
.claude/: settings.local.json
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_state.c  app_state.h  button_control.c  button_control.h  display_oled.c  display_oled.h  internet_check.c  internet_check.h  main.c  relay_control.c  relay_control.h  router_watchdog.c  router_watchdog.h  status_leds.c  status_leds.h  telegram_bot.c  telegram_bot.h  web_server.c  web_server.h  wifi_config_portal.c  wifi_config_portal.h  wifi_credentials.c  wifi_credentials.h  wifi_manager.c  wifi_manager.h
